--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -11,6 +11,7 @@ h4,
 h5,
 h6{
   font-size: inherit;
+  margin: 0;
 }
 ul,
 li{
@@ -22,4 +23,88 @@ a{
   text-decoration: none;
   display: inline-block;
   color: inherit;
+}
+body{
+  @extend %raleway__regular;
+}
+.container{
+  max-width: 1170px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+.header__select{
+  .jq-selectbox__select{
+    border: none;
+    border-radius: 0;
+    background: transparent;
+    box-shadow: none;
+    text-shadow: none;
+    padding: 0 17px 0 18px;
+  }
+  .jq-selectbox__select-text{
+    @extend %raleway__regular;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: .5px;
+    width: 100% !important;
+    color: #0d3351;
+  }
+  .jq-selectbox__trigger{
+    border-left: none;
+    width: 12px;
+    &::after{
+      content: "";
+      position: absolute;
+      background-image: url('../images/header__input-after.png');
+      width: 8px;
+      height: 5px;
+      right: 0;
+      top: 7px;
+    }
+  }
+  .jq-selectbox__trigger-arrow{
+    display: none;
+  }
+}
+.jq-selectbox.focused .jq-selectbox__select{
+  border: none;
+}
+.jq-selectbox li{
+  text-align: center;
+}
+.jq-selectbox li + li {
+  position: relative;
+  &::before{
+    position: absolute;
+    content: "";
+    top: 0;
+    height: 1px;
+    width: 100%;
+    background-color: #000;
+    left: 0;
+  }
+}
+.jq-selectbox li:hover {
+  background-color: #fff;
+  color: #0d3351;
+}
+.jq-selectbox li.selected {
+  background-color: #fff;
+  color: #0d3351;
+}
+.section-title,
+.title{
+  @extend %roboto-slab__reg;
+}
+.btn__link{
+  padding: 15px 50px;
+  background-color: #33c7fd;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: .5px;
+  color: #fff;
+  transition: all .3s;
+  &:hover{
+    background-color: #13b0e9;
+  }
 }
