--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -99,6 +99,28 @@
     font-size: 30px;
     line-height: 33px;
   }
+  .footer__item:first-child {
+    max-width: 370px;
+  }
+  .mfp-content {
+    max-width: 720px;
+  }
+  .card-form {
+    max-width: 720px;
+    padding: 118px 32px 86px 48px;
+  }
+  .card-form__photos-big{
+    max-width: 282px;
+  }
+  .card-form__photos-small{
+    max-width: 66px;
+  }
+  .card-form__photos-small + .card-form__photos-small {
+    margin-left: calc(2px - .5px);
+  }
+  .card-form__textarea {
+    margin-left: 30px;
+  }
 }
 @media(max-width: 1300px){
   .first-screen__textarea-title {
